# graphV

./: .gitignore  CMakeLists.txt  README.md
include/: Canvas.hpp  ForceModel.hpp  ForceModelEades.hpp  Graph.hpp  NcursesRenderer.hpp  Node.hpp  SDLRenderer.hpp  UI.hpp  UIRender.hpp  canvas.hpp  cursesRenderer.hpp  graph.hpp  node.hpp  types.hpp
sample/: file1.md  file2.md  file5.md
src/: Canvas.cpp  ForceModelEades.cpp  Graph.cpp  Node.cpp  UI.cpp  canvas.cpp  graph.cpp  main.cpp  types.cpp
src/core/: Graph.cpp  Node.cpp
src/models/: ForceModelEades.cpp
src/renders/: NcursesRenderer.cpp  SDLRenderer.cpp  cursesRenderer.cpp
testing/: archivoDos.txt  main.md
